@@ -8,9 +8,14 @@ svn trunk
   parent monitoring process dies, also kill the subprocess.
 * When using ``paster serve --log-file``, append to the log file (was
   truncating any previous contents).
+
 * Read logging information from the server file, using the logging module's
   `standard configuration format
   <http://python.org/doc/current/lib/logging-config-fileformat.html>`_
+
+* When adding files don't fail because an svn command fails.  Helpful
+  particularly on Windows, when the svn command-line isn't installed
+  (e.g., using TortoiseSVN).
 
 1.3.3
 -----
